# docs/swagger.json
@@ -14,8 +14,14 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8000",
-    "basePath": "/v2",
+    "host": "127.0.0.1:8000",
+    "securityDefinitions": {
+        "BearerAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    },
     "paths": {
         "/api/actor": {
             "post": {
